# youtube-dl-gui

./: .flake8  .gitignore  dev-requirements.txt  pyproject.toml  requirements.txt
devscripts/: check-translation.py
tests/: test_ditem.py  test_parsers.py  test_utils.py  test_widgets.py
youtube_dl_gui/: __init__.py  __main__.py  downloaders.py  downloadmanager.py  logmanager.py  mainframe.py  optionsframe.py  optionsmanager.py  parsers.py  updatemanager.py  utils.py  widgets.py
