[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-dlg"
description = "A cross platform front-end GUI of the popular yt-dlp media downloader written in wxPython"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "The Unlicense"}
keywords = ["youtube", "download", "gui", "wxpython"]
authors = [
    {name = "Sotiris Papadopoulos", email = "ytubedlg@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "License :: Public Domain",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video"
]
dependencies = [
    "wxPython>=4.1.0",
    "yt-dlp>=2025.06.25",
    "requests>=2.25.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://mrs0m30n3.github.io/youtube-dl-gui/"
Repository = "https://github.com/MrS0m30n3/youtube-dl-gui"
Issues = "https://github.com/MrS0m30n3/youtube-dl-gui/issues"

[project.scripts]
youtube-dl-gui = "youtube_dl_gui.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "youtube_dl_gui.version.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]